# qml_sqlite_tree_example

./: .gitignore  NewNoteDialogStyled.qml  README.md  exemplar_data.sqlite  pyproject.toml
src/: database_handler.py  init_db.py  key_emitter.py  main.py  tree_model.py
src/qml/: AppMenu.qml  EditTitleDialog.qml  MenuWithKbd.qml  MyTreeView.qml  NewNoteDialog.qml  main.qml
